# steampipe-4233-repro

./: .gitignore  README.md  pyproject.toml
steampipe_4233_repro/: __init__.py
